# conicshield

./: .env.example  .gitignore  BENCHMARK_GOVERNANCE.md  ENGINEERING_HANDOFF_IMPLEMENTATION_PLAN.md  ENGINEERING_STATUS.md  MAINTAINER_RUNBOOK.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  fixture-policy.yml  governance-audit.yml  governance-dashboard.yml  inter-sim-rl-ci.yml  native-parity.yml  publish-benchmark.yml  release-orchestration.yml  solver-ci.yml  solver-touch.yml
benchmarks/: DASHBOARD_README.md  PUBLISHED_RUN_INDEX.json  registry.json
benchmarks/published_runs/: .gitignore  README.md
benchmarks/runs/: README.md
benchmarks/templates/: governance_decision.template.md
conicshield/: _optional.py  benchmark_paths.py  published_run_index.py  solver_errors.py
conicshield/artifacts/: payloads.py  run_context.py  run_spec.py  schemas.py  summary_builder.py  validator.py  validator_cli.py  writer.py
conicshield/bench/: bank_payloads.py  build_transition_bank.py  episode_runner.py  metrics.py  offline_graph_export.py  passthrough_projector.py  reference_run.py  replay_graph_env.py  report.py  transition_bank.py
conicshield/core/: interfaces.py  moreau_batched.py  moreau_compiled.py  result.py  solver_factory.py  solver_smoke_cli.py  telemetry.py
conicshield/governance/: audit.py  audit_cli.py  audit_policy.md  dashboard.py  dashboard_cli.py  family_bump.py  family_manifest.py  family_policy.py  finalize.py  finalize_cli.py  models.py  policy.py  publish.py  registry.py  release.py  release_cli.py  release_policy.md  release_validator.py  review_record_template.md  runbook_cli.py
conicshield/parity/: cli.py  fixture_policy.py  gates.py  regenerate_fixture.py  replay.py
conicshield/reference_correctness/: __init__.py  conic_suite.py
conicshield/specs/: compiler.py  native_moreau_builder.py  schema.py  shield_qp.py
docs/: ARCHITECTURE.md  BENCHMARK_GOVERNANCE.md  CI_MERGE_GATES.md  DEVENV.md  DIFFERENTIATION_VALIDATION_POLICY.md  ENGINEERING_STATUS.md  FIXTURE_POLICY.md  HOST_REALISTIC_RUNBOOK.md  INTER_SIM_RL_INTEGRATION.md  MAINTAINER_RUNBOOK.md  METRICS_INVENTORY.md  MOREAU_API_NOTES.md  MOREAU_INSTALL_AND_ENVIRONMENT_POLICY.md  NATIVE_ARM_PUBLISH_CHECKLIST.md  NATIVE_PARITY_POLICY.md  PARITY_AND_FIXTURES.md  PARITY_FIXTURE_PROMOTION.md  PERFORMANCE_BENCHMARKING_POLICY.md  PROPOSER_DOCUMENTATION.md  README.md  RELEASE_POLICY.md  ROADMAP.md  STATE_OF_THE_ART_NOTES.md  VERIFICATION_AND_STRESS_TEST_PLAN.md  VERIFICATION_MASTER_SPEC.md
docs/adr/: 001-progress-clearance-constraints.md
schemas/: offline_transition_graph_export.schema.json  performance_summary.schema.json  shield_context.schema.json  summary.schema.json  transition_bank_file.schema.json
scripts/: artifact_validation_report.py  bootstrap_moreau.sh  conic_suite_report.py  differentiation_check.py  environment_check.py  execute_real_publish_chain.py  first_governance_publish.py  first_governance_publish_dry_run.py  generate_parity_report.py  generate_test_visual_report.py  generate_trust_dashboard.py  governed_local_promotion.py  performance_benchmark.py  produce_reference_bundle.py  reference_correctness_summary.py  refresh_published_run_index.py  regenerate_parity_fixture.py  run_full_pytest.py  run_live_vendor_tests.py  smoke_check.py  update_engineering_status_from_solver_versions.py
tests/: LAYERS.md  README.md  STRUCTURE.md  __init__.py  _repo.py  conftest.py  fake_inter_sim_env.py  test_artifact_validator_edges.py  test_artifact_validator_fixture.py  test_bank_payloads.py  test_bench_metrics.py  test_bench_report.py  test_build_transition_bank_from_json.py  test_cli_modules_help.py  test_cvxpy_moreau_projector.py  test_dashboard.py  test_episode_runner_arm_divergence.py  test_episode_runner_fake_env.py  test_episode_step_record_schema.py  test_family_bump.py  test_family_manifest.py  test_finalize.py  test_fixture_policy.py  test_geometry_prior.py  test_governance_audit.py  test_governance_hermetic_publish_chain.py  test_governance_integrated_flow.py  test_governance_publish.py  test_import_isolation.py  test_inter_sim_policy.py  test_inter_sim_rl_e2e.py  test_mini_reference_bundle.py  test_native_moreau_projector.py  test_offline_graph_export_bank.py  test_parity_replay.py  test_parity_replay_missing_inputs.py  test_payloads.py  test_performance_summary_schema.py  test_pyproject_metadata.py  test_reference_run_bundle.py  (+26 more)
tests/artifacts/: test_artifact_validator_edges.py  test_artifacts_layout_smoke.py
tests/core/: test_solver_factory.py
tests/diff/: test_differentiation_check.py
tests/environment/: test_engineering_status_versions.py  test_governed_local_promotion_smoke.py  test_import_isolation.py  test_optional_dependencies.py  test_optional_solver_errors.py  test_pyproject_metadata.py  test_repo_hygiene.py  test_run_live_vendor_tests_smoke.py  test_third_party_pins.py
tests/fixtures/: offline_graph_export_minimal.json
tests/governance/: test_benchmark_paths_resolution.py  test_family_manifest.py  test_family_policy.py  test_finalize.py  test_finalize_parity_gate.py  test_governance_hermetic_publish_chain.py  test_governance_integrated_flow.py  test_governance_publish.py  (+4 more)
tests/live/: README.md
(+57 files in other folders)
