[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conicshield"
version = "0.1.0"
description = "Proof-aware runtime safety shields, governed benchmarks, and native parity validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Generated Scaffold for Mateo Petel" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pydantic>=2.7",
  "typing-extensions>=4.10",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
solver = [
  "cvxpy>=1.8.2",
  "cvxpylayers>=1.0.4",
  "moreau[cuda]",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["conicshield*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
