[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conicshield"
version = "0.1.0"
description = "Proof-aware runtime safety shields, governed benchmarks, and native parity validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fraware" }]
keywords = ["safety", "rl", "convex-optimization", "benchmarks", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pydantic>=2.7",
  "typing-extensions>=4.10",
  "cvxpy>=1.8.2",
  "cvxpylayers>=1.0.4",
  "jsonschema>=4.23",
]

[project.urls]
Homepage = "https://github.com/fraware/conicshield"
Repository = "https://github.com/fraware/conicshield"
Documentation = "https://github.com/fraware/conicshield#readme"
Issues = "https://github.com/fraware/conicshield/issues"

[project.optional-dependencies]
solver = [
  # Vendor dependency: install only through the vendor-approved package source.
  # Do not assume default-index "pip install moreau" provides the required solver backend.
  "moreau[cuda]",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "python-dotenv>=1.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pip-tools>=7.4",
  "hypothesis>=6.100",
  "matplotlib>=3.8",
  "types-jsonschema>=4.23",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["conicshield*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/test_cvxpy_moreau_projector.py" = ["E402"]
"tests/vendor/native/test_native_moreau_projector.py" = ["E402"]
"tests/vendor/native/test_shield_native_softmax_batch.py" = ["E402"]
"tests/vendor/diff/test_inter_sim_shield_projection_fd.py" = ["E402"]
"tests/test_shield_solver_integration.py" = ["E402"]
"tests/test_replay_hypothesis_optional.py" = ["E402"]
"tests/test_replay_banks_hypothesis_optional.py" = ["E402"]
"tests/reference/test_reference_conic_correctness.py" = ["E402"]
"tests/reference/test_reference_conic_trusted_shape.py" = ["E402"]
"conicshield/bench/passthrough_projector.py" = ["ARG002"]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m \"not solver and not requires_moreau and not inter_sim_rl and not slow\" --durations=15"
markers = [
  "solver: solver-related tests (public cvxpy stack and/or vendor Moreau integration)",
  "vendor_moreau: requires vendor Moreau installation and license",
  "integration: cross-module or external integration tests",
  "requires_moreau: requires installed moreau package and license",
  "inter_sim_rl: requires forked inter-sim-rl checkout (INTERSIM_RL_ROOT or submodule path)",
  "slow: long-running subprocess or env setup (optional filter: -m \"not slow\")",
  "reference_correctness: shield-QP or reference-vs-reference correctness checks",
  "performance_benchmark: timing / scaling tests (optional vendor hardware)",
  "live_vendor: selected in scripts/run_live_vendor_tests.py (Moreau / inter-sim-rl / solver-marked tests)",
]
filterwarnings = [
  "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.*",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "cvxpy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moreau"
ignore_missing_imports = true

[tool.coverage.run]
source = ["conicshield"]

[tool.coverage.report]
fail_under = 58
show_missing = true
